@@ -8,6 +8,8 @@ weblogic安装部署文档请参考
 
 [04呼叫中心-weblogic安装部署](./04呼叫中心-weblogic安装部署.docx)
 
+
+
 ### 服务部署和发布
 
 1: 登录weblogic后，初始页面内容中点击左侧的部署，如图：
@@ -28,17 +30,25 @@ Nginx安装部署以及配置文档请参考
 
 [06nginx安装部署+Nginx配置.docx](./06nginx安装部署+Nginx配置.docx)
 
-### 服务测试
+
+
+### 服务测试(单机+负载均衡)
+
+
 
 #### weblogic直连测试
 
 ![](./weblogicimages/5.png)
+
+
 
 #### weblogic+Nginx测试
 
 ![](./weblogicimages/6.png)
 
 总结：以上2种测试效果其实是一样，只是从部署结构上一个是单机（单节点）直连一个是负载均衡（多节点）
+
+
 
 ## 基础配置
 
@@ -54,21 +64,115 @@ Nginx安装部署以及配置文档请参考
 
 ![](./weblogicimages/8.png)
 
+
+
 ### weblogic系统配置
 
 1：端架左侧菜单环境-》服务器，进入页面后点击我们发布的服务AdminServer(管理)
 
 ![](./weblogicimages/9.png)
 
-2：进入到AdminServer的配置下，选择头部的超载菜单，下面有一个最大线程阻塞时间建议1200（默认是600）可以根据实际调整
+
+
+2：进入到AdminServer的配置下，选择头部的“超载”菜单，下面有一个最大线程阻塞时间建议1200（默认是600）可以根据实际调整
 
 ![](./weblogicimages/10.png)
 
-3：选择头部并发菜单，最大并发新建线程数建议300（默认100）   最大并发长时间请求数100（默认100），可以根据实际调整
+
+
+3：选择头部“并发”菜单，最大并发新建线程数建议300（默认100）   最大并发长时间请求数100（默认100），可以根据实际调整
 
 ![](./weblogicimages/11.png)
 
+
+
+4：点击“服务器启动”菜单 ，在下面的参数设置如下内容
+
+~~~
+-Xms2048m  -Xmx2048m  -XX:PermSize=512m -XX:MaxPermSize=1024m
+~~~
+
+
+
+~~~
+-Xmx    Java Heap最大值，默认值为物理内存的1/4，最佳设值视物理内存大小及计算机内其他内存开销而定
+
+-Xms    Java Heap初始值，Server端JVM最好将-Xms和-Xmx设为相同值，开发测试机JVM可以保留默认值；
+-XX:MaxPermSize     Perm（俗称方法区）占整个堆内存的最大值
+~~~
+
+![](./weblogicimages/12.png)
+
+
+
 ## 通用命令
+
+1：启动weblogic命令
+
+cd /usr/local/weblogic/weblogic/user_projects/proddomain/bin
+
+nohup ./startWebLogic.sh
+
+
+
+2：查看weblogic进程
+
+ps -ef|grep weblogic
+
+
+
+3：查看服务器weblogic资源使用
+
+top
+
+
+
+4：停止weblogic命令
+
+cd /usr/local/weblogic/weblogic/user_projects/proddomain/bin
+
+./stopWebLogic.sh
+
+
+
+5：日志查看
+
+cd /usr/local/weblogic/weblogic/user_projects/proddomain/logs
+
+
+
+## 已知问题和遇到的坑
+
+### 服务部署失败
+
+部署服务时候回出现服务发布不成功，重启weblogic服务后恢复
+
+
+
+### weblogic初步访问很慢
+
+目前这个是已知问题Java JVM和Linux环境匹配时候（ 实际是JVM在Linux下的bug：他想调用一个随机函数，但是取不到。）
+
+
+
+~~~
+1)较好的解决办法：
+        在Weblogic启动参数里添加 “-D java.security.egd=file:/dev/./urandom” (/dev/urandom 无法启动)
+2)最差的解决办法： 
+        执行命令 mv /dev/random /dev/random.ORIG ; ln /dev/urandom /dev/random
+　　将/dev/random 指向/dev/urandom
+3)最好的解决办法：
+        修改Linux上Weblogic使用的jdk $JAVA_HOME/jre/lib/security/java.security 文件
+　　将securerandom.source=file:/dev/urandom 修改为 securerandom.source=file:/dev/./urandom
+
+这样可以解决任何一个域Weblogic启动慢的问题的问题
+~~~
+
+
+
+### weblogic发布服务中集成OData
+
+注意OData中使用的协议 
 
 
 
